
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2008-01-02 DP  1.8.1  Fix a bug that could cause a crash on GTK when closing
                      the query tool in certain circumstances.
2008-01-02 DP  1.8.1  Avoid a crash if the connection is lost and the Functions
                      node is refreshed.
2008-01-02 DP  1.8.1  Avoid crashes when working with objects with % characters
                      in the name.
2008-01-01 DP  1.8.1  Properly reverse-engineer the SQL for indexes with DESC,
                      NULLS FIRST or NULLS LAST column options. 
2008-01-01 DP  1.8.1  Only offer the Jobs node if the user can access the
                      pgagent schema.
2007-12-19 DP  1.8.1  Ensure the 'Create Rule' context menu option is always
                      offered when appropriate.
2007-12-19 DP  1.8.1  Prevent the user from trying to debug catalog objects.
2007-12-17 DP  1.8.1  Refresh the tree without erroring after creating a new
                      package on EnterpriseDB.
2007-12-17 DP  1.8.1  Fix a crash that occured if an object called '%' was
                      selected in the treeview, per Alexander Steffens.
2007-12-14 DP  1.8.1  Fix a line number error in the debugger seen with
                      procedures which start on the same line as the 'CREATE
                      PROCEDURE foo IS ...' Per report from Heikki Linnakangas.
2007-12-14 GL  1.8.1  Cleanup the covering index control logic in the Foreign
                      Key dialogue.
2007-12-13 GL  1.8.1  Fix to refresh version string and number, and last OID,
                      per a report from Alexander Kirpa.