@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-01-03 DP  1.8.2  Ensure the password and confirmed password always match
+                      when adding or editing roles or users.
 2008-01-02 DP  1.8.1  Fix a bug that could cause a crash on GTK when closing
                       the query tool in certain circumstances.
 2008-01-02 DP  1.8.1  Avoid a crash if the connection is lost and the Functions
